Fixed styling of checkboxes so that they wrap when resizing screen

--- a/WonByCheckMate/src/app/user-form/user-form.component.scss
+++ b/WonByCheckMate/src/app/user-form/user-form.component.scss
@@ -1,6 +1,3 @@
-app-checkbox {
-    float: left;
-}
 
 mat-form-field {
     width: 40%;
@@ -22,10 +19,8 @@ button {
 }
 
 form {
-    // margin-top: 20px;
-    // display: flex;
-    // align-items: flex-start;
-    // margin-left: 10px;
+    margin-top: 20px;
+    margin-left: 10px;
 }
 
 span {
@@ -33,8 +28,13 @@ span {
     font-size: large;
 }
 
+.form-item {
+    display: flex;
+    align-items: flex-start;
+}
+
 .checkboxes {
-    // display: inline-block;
+    display: inline-block;
 }
 
 .formError {
